fix card layout on mobile

--- a/src/css/credit-card.css
+++ b/src/css/credit-card.css
@@ -69,3 +69,10 @@
   inset: 0;
   z-index: 0;
 }
+
+@media (max-width: 420px) {
+  .cc {
+    box-shadow: 3px 3px 6px #000000;
+    border-radius: 15px;
+  }
+}
